--- a/reports/report1.tex
+++ b/reports/report1.tex
@@ -21,7 +21,6 @@
 (\verb|$HOME = /export/home/012/a0121573|)
 
 \subsection{各プログラムの設計方針}
-
 \begin{description}
   \item[Main.hs] ファイルを読み込んでパーサにかけます
   \item[Parser.hs] 課題3の仕様に合わせたTiny Cパーサになります
@@ -29,7 +28,6 @@
 \end{description}
 
 \subsection{各部の説明}
-
 \begin{description}
   \item[Main.hs] パーサを呼び出します
   \item[Parser.hs] 課題3の仕様に合わせたTiny Cパーサになります
@@ -39,5 +37,45 @@
 
 \subsection{感想}
 課題3の仕様を一つずつ確認してパーサを構築していく手順に時間がかかりました。
+
+\section{課題4}
+\subsection{回答}
+課題4の実行例と似た形式で出力するパーサを作成しました。
+
+構文的に誤りのない場合は型を利用して構文木が出力され、構文的に誤りのある場合は例えば以下の様に出力されます。
+
+以下の様なソースコードに対し
+
+\begin{verbatim}
+int a b;
+\end{verbatim}
+
+以下の様な出力がされます。
+
+\begin{verbatim}
+"TinyC" (line 1, column 7):
+unexpected "b"
+expecting "("
+\end{verbatim}
+
+\subsection{プログラムを置いたディレクトリパス}
+\verb|$HOME/dev/tiny-c/task3/haskell/| にソースコードを置いてあります。
+
+\verb|$HOME/dev/tiny-c/task4/| にテストコードを置いてあります。
+
+(\verb|$HOME = /export/home/012/a0121573|)
+
+\subsection{各プログラムの設計方針}
+課題3と同様
+
+\subsection{各部の説明}
+以下が課題3と異なります。
+
+\begin{description}
+  \item[test.tc] 実行例に使われていたTiny Cプログラムのファイル
+\end{description}
+
+\subsection{感想}
+打ち間違い(declaratorやdeclaration)などでパーサが正常に機能しないことがいくつかあり、修正に時間がかかった。
 
 \end{document}
